Добавление авторизации и регистрации
